[package]
name = "memory-utils"
version = "0.1.0"
authors = ["sutr-app"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
async-trait = "0.1"
debug_stub_derive = "0.3"
envy = "0.4"
flume = { version = "0.12", default-features = false, features = [
    "async",
    "select",
] }
futures = "0.3"
moka = { version = "0.12", features = ["future"] }
serde = "1.0"
serde_derive = "1.0"
stretto = { version = "0.8", features = ["async"] }
tokio = { version = "1", features = [
    "full",
    # "macros",
    # "rt-multi-thread",
    # "signal",
    # "sync",
    # "time",
    # "process",
    # "parking_lot",
] }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = "0.1"
